# devops-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/design/: advanced-security-alerts.md  dataverse-mcp-alignment.md  efficient-log-retrieval.md
src/devops_mcp/: __init__.py  _app.py  client.py  models.py  server.py
src/devops_mcp/tools/: __init__.py  advanced_security.py  discovery.py  pipelines.py  pull_requests.py  repositories.py  work_items.py
tests/: test_auth_lock_timeout.py  test_build_url.py  test_create_pull_request_work_item_linking.py  test_model_validation.py  test_paginate_results.py  test_request_with_retry.py  test_smoke.py  test_token_cache.py  test_work_item_comment_format.py  test_work_item_field_format.py  test_work_item_tags.py
