[project]
name = "devops-mcp"
version = "0.1.0"
description = "An MCP server for interacting with Azure DevOps"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ryan James"},
]
license = "MIT"
keywords = [
    "mcp",
    "model-context-protocol",
    "azure-devops",
    "devops",
    "copilot",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.20.0,<1.0",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ryanmichaeljames/devops-mcp"
Repository = "https://github.com/ryanmichaeljames/devops-mcp"
Issues = "https://github.com/ryanmichaeljames/devops-mcp/issues"

[project.scripts]
devops-mcp = "devops_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.0",
    "twine>=5.0",
]
